Oprettet ved hjælp af Colaboratory

--- a/Group Assigment2/GroupAssignment2 - LSTM.ipynb
+++ b/Group Assigment2/GroupAssignment2 - LSTM.ipynb
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Only-Mike/DeepLearning-and-AI/blob/main/Group%20Assigment2/GroupAssignment2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Only-Mike/DeepLearning-and-AI/blob/main/Group%20Assigment2/GroupAssignment2%20-%20LSTM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "jaHFoeMLqTrj"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "Fac3b-nqtRvl"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "BzwO1SqgxYmO"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "pfKhAMqeu01h"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "ZE29l5Xmu6Y3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "XlIwp7o2yMV9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "id": "DZV_fPj5NeQd",
         "outputId": "fdd28d46-9765-44e7-80a8-063bf75058e8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
