Oprettet ved hjælp af Colaboratory

--- a/Group Assigment3/Assignment_3.ipynb
+++ b/Group Assigment3/Assignment_3.ipynb
@@ -52,6 +52,7 @@
         "from sentence_transformers import SentenceTransformer, util\n",
         "import torch\n",
         "import numpy as np\n",
+        "import gradio as gr\n",
         "from sentence_transformers.util import cos_sim\n",
         "\n",
         "#model = SentenceTransformer('bert-base-nli-mean-tokens')\n",
@@ -64,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "87fvGCi9L9U7",
-        "outputId": "9993761b-4796-44c3-b619-f79cc66d968e"
+        "outputId": "4c438ddf-80ac-4a12-f038-9204cd1e96b9"
       },
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +81,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 16
         }
       ]
     },
@@ -450,11 +451,11 @@
         "   "
       ],
       "metadata": {
-        "id": "Do3OWu1PbI4l",
-        "outputId": "81a71e7c-fe1d-4742-f8b7-f02918283045",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Do3OWu1PbI4l",
+        "outputId": "81a71e7c-fe1d-4742-f8b7-f02918283045"
       },
       "execution_count": 7,
       "outputs": [
@@ -6261,6 +6262,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Create query corpus for cosine similarity search\n",
         "def query_corpus_cos(query):\n",
         "  results = []\n",
         "  query_embedding = model.encode(query, convert_to_tensor=True)\n",
@@ -6283,7 +6285,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "\n",
+        "#Create query corpus for semantic search\n",
         "def query_corpus_sem(query):\n",
         "  query_embedding = model.encode(query, convert_to_tensor=True)\n",
         "  hits = util.semantic_search(query_embedding, corpus_embeddings, top_k=5)\n",
@@ -6299,191 +6301,18 @@
     {
       "cell_type": "code",
       "source": [
-        "   \"\"\" import pandas as pd\n",
-        "    hits = util.semantic_search(query_embedding, corpus_embeddings, top_k=5)\n",
-        "    df = pd.DataFrame(hits[0])\n",
-        "    df\n",
-        "    \"\"\"\""
-      ],
-      "metadata": {
-        "id": "L5v9S1ybd3bt",
-        "outputId": "dbdddfb0-c643-4483-fb0c-bfce70811821",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "   corpus_id     score\n",
-              "0        273  1.000000\n",
-              "1          6  0.222915\n",
-              "2         97  0.211822\n",
-              "3        190  0.208125\n",
-              "4         19  0.202361"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-b4a4c87c-46e4-4137-bfcc-cfaec3295459\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>corpus_id</th>\n",
-              "      <th>score</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>273</td>\n",
-              "      <td>1.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>6</td>\n",
-              "      <td>0.222915</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>97</td>\n",
-              "      <td>0.211822</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>190</td>\n",
-              "      <td>0.208125</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>19</td>\n",
-              "      <td>0.202361</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4a4c87c-46e4-4137-bfcc-cfaec3295459')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-b4a4c87c-46e4-4137-bfcc-cfaec3295459 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b4a4c87c-46e4-4137-bfcc-cfaec3295459');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Patent Search using PatentSBERTa\n",
-        "import gradio as gr\n",
-        "\n",
-        "title = \"Patent Search using PatentSBERTa\"\n",
-        "\n",
         "demo = gr.Interface(fn=query_corpus_cos, inputs=\"text\", outputs=\"dataframe\")\n",
         "    \n",
         "if __name__ == \"__main__\":\n",
         "    demo.launch()   "
       ],
       "metadata": {
-        "id": "bfNLDr9bdp7w",
-        "outputId": "caace32f-dd28-46ba-9d03-ee9b3f1d1740",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 619
-        }
+        },
+        "id": "bfNLDr9bdp7w",
+        "outputId": "caace32f-dd28-46ba-9d03-ee9b3f1d1740"
       },
       "execution_count": 12,
       "outputs": [
@@ -6538,23 +6367,18 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Patent Search using PatentSBERTa\n",
-        "import gradio as gr\n",
-        "\n",
-        "title = \"Patent Search using PatentSBERTa\"\n",
-        "\n",
         "demo = gr.Interface(fn=query_corpus_sem, inputs=\"text\", outputs=\"dataframe\")\n",
         "    \n",
         "if __name__ == \"__main__\":\n",
         "    demo.launch()   "
       ],
       "metadata": {
-        "id": "m0k9B5RLi1s1",
-        "outputId": "076d36dd-3776-438d-d85a-47f547255e0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 619
-        }
+        },
+        "id": "m0k9B5RLi1s1",
+        "outputId": "076d36dd-3776-438d-d85a-47f547255e0d"
       },
       "execution_count": 13,
       "outputs": [
@@ -6612,12 +6436,12 @@
         "quoted_sentences[5]"
       ],
       "metadata": {
-        "id": "fDZaUkdyj6aP",
-        "outputId": "bf929252-a310-4bec-d9fa-e2c7de0b43d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "fDZaUkdyj6aP",
+        "outputId": "bf929252-a310-4bec-d9fa-e2c7de0b43d3"
       },
       "execution_count": 14,
       "outputs": [
