Oprettet ved hjælp af Colaboratory

--- a/Assignment4_Question_answer.ipynb
+++ b/Assignment4_Question_answer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYpZrwVTq2qj9eXucLsf72",
+      "authorship_tag": "ABX9TyP8z0ZeVVYNSqkDGV3vZ2Dp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Only-Mike/DeepLearning-and-AI/blob/main/Assignment4_Question_answer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#See https://langchain.readthedocs.io/en/latest/modules/indexes/chain_examples/qa_with_sources.html for ez way"
+      ],
+      "metadata": {
+        "id": "wv_XAlL4G-Lx"
+      }
     },
     {
       "cell_type": "code",
